<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">北京市门头沟区图书馆图书物流配送管理系统</string>
    <string name="app_name1">北京市门头沟区图书馆</string>
    <string name="app_name2">图书物流配送管理系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="et_account_hint">用户名</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登入</string>
    <string name="loginTip">正在登录,请稍等</string>
    <string name="url_config">地址配置</string>
    <string name="copyright">北京科美乾坤智能技术有限公司</string>
    <string name="menuSite">站点管理</string>
    <string name="menuBook">书籍管理</string>
    <string name="menuBookQuery">书籍查询</string>
    <string name="menuBookOperate">书籍接还</string>
    <string name="menuInventory">盘点</string>
    <string name="menuBookExport">数据导出</string>
    <string name="menuUnusualRegister">异常登记</string>
    <string name="menuUser">用户管理</string>
    <string name="menuLog">操作日志</string>
    <string name="menuImportBook">图书导入</string>
    <string name="title_activity_site">SiteActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="addSite">新增站点</string>
    <string name="sitename">站点名称</string>
    <string name="sitetelephone">电话</string>
    <string name="siteaddress">地址</string>
    <string name="back">返回</string>
    <string name="addBook">添加书籍</string>
    <string name="bookname">书  名</string>
    <string name="author">作  者</string>
    <string name="publish">出版社</string>
    <string name="isbn">ISBN</string>
    <string name="publishdate">出版时间</string>
    <string name="price">价格</string>
    <string name="bookstatus">状态</string>
    <string name="remark">备注</string>
    <string name="save">保存</string>
    <string name="barcode">标签</string>
    <string name="query">查询</string>
    <string name="borrowbook">接收</string>
    <string name="returnbook">归还</string>
    <string name="scan">扫描</string>
    <string name="operatetype">请选择操作类型</string>
    <string name="operatesite">请选择站点</string>
    <string name="username">用户名</string>
    <string name="password">密  码</string>
    <string name="telephone">电话</string>
    <string name="adduser">添加用户</string>
    <string name="bookunusualtype">图书异常类型</string>
    <string name="bookmissing">图书丢失</string>
    <string name="bookdefaced">图书污损</string>
    <string name="bookstolen">图书被盗</string>
    <string name="finishinventory">完成盘点</string>
    <string name="exporttitle">导出站点书籍数据</string>
    <string name="exporttip">请选择需要导出的站点</string>
    <string name="export">导出</string>
    <string name="exportmsg">正在导出数据</string>
    <string name="operatestart">开始时间</string>
    <string name="operateend">结束时间</string>
    <string name="addinventory">添加盘点任务</string>
    <string name="inventoryname">任务名称</string>
    <string name="unusualregister">异常登记</string>
    <string name="tipscan">请把设备感应区对准标签，即可完成接收归还操作。</string>
    <string name="logtype">操作类型</string>
    <string name="tipselectfile">请选择Excel图书导入文件</string>
    <string name="selectfile">选择</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_loading">正在加载</string>
    <string name="importexceltip">正在导入数据,请稍等...</string>
    <string name="scantip">正在扫描标签，请稍等...</string>
    <string name="querytip">正在查询数据，请稍等...</string>
    <string name="inventorytip">请把设备感应区对准标签，即进行盘点操作。</string>
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="title_activity_book_query">BookQueryActivity</string>
    <string name="title_activity_book_result">BookResultActivity</string>
    <string name="title_activity_book_operate_b">BookOperateBActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_unusual_register">UnusualRegisterActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title_activity_inventory_list">InventoryListActivity</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="title_activity_log_list">LogListActivity</string>
    <string name="title_activity_add_inventory">AddInventoryActivity</string>
    <string name="title_activity_import_book">ImportBookActivity</string>

</resources>
