<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookname"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_weight="2"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_weight="2"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode"
        android:gravity="center"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_weight="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookstatus"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_weight="3"/>

</LinearLayout>