<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/tv_app_subname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_app_name"
        />

    <ImageView
        android:id="@+id/login_picture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/login_picture_bg"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_default_avatar"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_app_subname"
        android:layout_marginTop="30dp"/>

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_picture">
    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/lbs_popup_bg"
        android:orientation="vertical">
        <EditText
            android:id="@+id/account"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/et_account_hint"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"/>
        <View
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/password"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/et_password_hint"
            android:background="@drawable/login_et_bg"
            android:layout_margin="2dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/login"
        android:layout_below="@id/ll_user_info"
        android:background="@drawable/btn_login"
        android:textColor="@android:color/white"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_url_config"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_above="@+id/tv_copyright_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/url_config"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/tv_copyright_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/copyright"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:textColor="@color/white"/>


</RelativeLayout>
