<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.jxd.bookdistribution.activity.UnusualRegisterActivity">

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        <include android:id="@+id/ilActionbar" layout="@layout/layoutactionbar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTitleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lltop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookunusualtype"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"/>
        <RadioGroup
            android:id="@+id/rdgType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">
            <RadioButton
                android:id="@+id/rdbMissing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/bookmissing"/>
            <RadioButton
            android:id="@+id/rdbDefaced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
            android:text="@string/bookdefaced"/>
            <RadioButton
                android:id="@+id/rdbStolen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/bookstolen"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBookName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTitleHeader"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookname"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etBookName"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBookName"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:singleLine="true"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etAuthor"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAuthor"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etPublish"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPublishDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPublish"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publishdate"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etPublishDate"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPublishDate"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            android:textColor="@color/white"
            android:gravity="end"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etISBN"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llISBN"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            android:gravity="end"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etPrice"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llPrice"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode"
            android:gravity="end"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etBarcode"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRemark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llBarcode"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:gravity="end"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            android:minWidth="70dp"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <EditText
            android:id="@+id/etRemark"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAddRegister"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="#303538"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:text="@string/unusualregister"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#303538"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textSize="22sp"
            android:padding="4dp"
            android:text="@string/back"/>

    </LinearLayout>

</RelativeLayout>
