<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.jxd.bookdistribution.activity.AddBookActivity">

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        <include android:id="@+id/ilActionbar" layout="@layout/layoutactionbar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lltop"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/tvBookName"
        android:text="@string/bookname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:minWidth="60dp"
        />
    <EditText
        android:id="@+id/etBookName"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook2"
        android:layout_below="@id/llbook1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
    android:id="@+id/tvAuthor"
    android:text="@string/author"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="right"
        android:minWidth="60dp"/>
    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook3"
        android:layout_below="@id/llbook2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/tvPublish"
        android:text="@string/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etAuthor"
        android:textColor="@color/white"
        android:minWidth="60dp"
        android:gravity="right"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/etPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook4"
        android:layout_below="@id/llbook3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
    android:id="@+id/tvISBN"
    android:text="@string/isbn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="right"
        android:minWidth="60dp"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/etISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook5"
        android:layout_below="@id/llbook4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tvPublishDate"
        android:text="@string/publishdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etISBN"
        android:textColor="@color/white"
        android:minWidth="60dp"
        android:gravity="right"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/etPublishDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook6"
        android:layout_below="@id/llbook5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/tvPrice"
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPublishDate"
        android:minWidth="60dp"
        android:textColor="@color/white"
        android:gravity="right"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbook7"
        android:layout_below="@id/llbook6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBarcode"
            android:text="@string/barcode"
            android:layout_width="wrap_content"
            android:minWidth="60dp"
            android:textColor="@color/white"
            android:gravity="right"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/etBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBookBottonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSaveBook"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="#303538"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnBookScan"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="#303538"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:visibility="gone"
            android:padding="4dp"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#303538"
            android:textColor="#ffffff"
            android:layout_weight="1"
            android:textSize="22dp"
            android:padding="4dp"
            android:text="@string/back"/>
    </LinearLayout>

</RelativeLayout>
