<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context="com.jxd.bookdistribution.activity.ExportActivity">

    <LinearLayout
        android:id="@+id/lltop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        <include android:id="@+id/ilActionbar" layout="@layout/layoutactionbar"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llexportTitle"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/exporttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exporttip"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExportBottonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/btnExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#303538"
            android:textColor="#ffffff"
            android:padding="4dp"
            android:textSize="22dp"
            android:text="@string/export"/>
        <Button
            android:id="@+id/btnExportBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#303538"
            android:textColor="#ffffff"
            android:textSize="22dp"
            android:padding="4dp"
            android:text="@string/back"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvSites"
        android:layout_below="@id/llexportTitle"
        android:layout_above="@id/llExportBottonMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>
